--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,4 +156,5 @@
     <string name="export_done">Export complete</string>
     <string name="import_done">Import complete</string>
     <string name="import_empty">Import file is empty</string>
+    <string name="title_activity_splash_screen">SplashScreen</string>
 </resources>
