--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,7 +52,7 @@
 
     <!-- } App Menus -->
 
-    <string name="about_version">Version 1.0.0</string>
+    <string name="about_version">Version</string>
     <string name="about_date">2018</string>
     <string name="website_link">http://connriverlines.weebly.com/</string>
 
